mobile/mobile.scss
/********************************Adjusts Search Bar Width on Mobile**********************************/
.search-menu {
    width: 95%;
    margin: 0 auto;
}
/************************************/

// Increase site logo size a little
.d-header #site-logo {
    max-width: 10em;
    max-height: 3.18em;
}

.d-header .title {
    margin-top: 5px;
    margin-bottom: 0;
}

div.directory-ad-desktop {
    display:none;
}


// If the the phone has a small width, adjust the side of the logo area
@media (max-width: 320px) {
    .d-header .title {
        max-width: 40%;
    }
}

// Fix odd width issue for latest topics
div#list-area table.topic-list tr.topic-list-item td {
    width: 100%; 
}

.hidden-for-mobile {
    display: inline-block !important;
}

.d-header .title {
    overflow: initial;
}

// Make category titles longer on mobile to prevent unnecessary wrapping.
.category-list.with-topics th.main-link span.category-name {
   display: inline-block;
   //width: 300px;
   width: 100%;
}

/*****************************************************************/

/*******************  Published Pages ****************************/
body.topic-77513 .published-page-content-wrapper {
    width: 100% !important;
    padding: 0 !important;
}
body.topic-77513 .published-page-header-wrapper {
    display: none; /* Hide the header */
}
@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1.5) {
    [data-theme-directory-block], [data-theme-premium-directory-block-1] {
        flex: 1 1 40% !important;
        max-width: 40% !important;
    }

    .published-page-content-body {
        width: 100% !important;
    }

    [data-theme-directory] {
        width: 100% !important;
        padding: 0 20px !important;
    }
}
@media (max-width: 768px) {
    [data-theme-directory-block], [data-theme-premium-directory-block-1] {
        flex: 1 1 40% !important;
        max-width: 40% !important;
    }
    .published-page-content-body {
        width:100%!important;
    }
 
 [data-theme-directory] {
        width:100%!important;
        padding:0 20px!important;
    }
[data-testimonials] {
    text-align:center!important;
    width:70%;
    margin-left:auto;
    margin-right:auto;
}
}

@media (max-width: 480px) {
    [data-theme-directory] {
        width:100%!important;
        padding:0 20px !important;
    }
    [data-theme-directory-tables] {
        border:none!important;
        width:100%!important;
    }

    [data-theme-directory-block], [data-theme-premium-directory-block-1] {
    margin:0px!important;
    max-width:100%!important;
    }
    [data-theme-directory-blocks] {
            justify-content:center!important;

    }
[data-theme-directory] [data-theme-directory-tables] {
    padding-top: 0px!important;
    margin-top:-25px!important;
}
[data-theme-directory] h2 {
    font-size:1.3rem!important;
    padding: 5px 0px!important;
}
[data-theme-page-header] {
    text-align:center!important;
}
[data-banner-ad-placeholder] img {
    width: 90%!important;
    height: auto;
    max-width:300px!important;
}
[data-theme-page-header] img {
    width:300px!important;
}
[data-theme-directory] h1 {
   font-size:1.5rem;
}
[data-testimonials] {
    text-align:center!important;
    width:90%;
    margin-left:auto;
    margin-right:auto;
}
div.category-logo {
    display:none!important;
}
    section.category-heading {
        margin-bottom:0px!important;
        padding-top:0px!important;
        padding-bottom:0px!important;
        border:none!important;
}}
/*****************************************************************/

